レスポンスの型指定を追加
