# apps/backend/src/controllers/api-v1/api-v1.controller.ts
@@ -5,13 +5,17 @@ import {
   Get,
   InternalServerErrorException,
   Logger,
+  NotFoundException,
   Param,
   UseGuards,
 } from '@nestjs/common';
 import { ApiHeader, ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
 import { HeadlineTopicProgram } from '@prisma/client';
 import { ApiV1Service } from './api-v1.service';
-import { HeadlineTopicProgramsFindRequestDto } from './dto';
+import {
+  HeadlineTopicProgramDto,
+  HeadlineTopicProgramsFindRequestDto,
+} from './dto';
 
 @Controller('api/v1')
 @ApiTags('ApiV1')
@@ -31,22 +35,35 @@ export class ApiV1Controller {
     example: 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx',
     required: true,
   })
-  @ApiResponse({ status: 200, description: '処理成功' })
+  @ApiResponse({
+    status: 200,
+    description: '処理成功',
+    type: HeadlineTopicProgramDto,
+  })
   @ApiResponse({ status: 400, description: 'Bad request' })
+  @ApiResponse({ status: 404, description: 'Not found' })
   @UseGuards(ApiV1ApiKeyGuard)
   async getHeadlineTopicProgram(
     @Param('id') id: string,
-  ): Promise<HeadlineTopicProgram> {
+  ): Promise<HeadlineTopicProgramDto> {
     this.logger.debug('ApiV1Controller.getHeadlineTopicProgram called', {
       id,
     });
     try {
+      // 指定のヘッドライントピック番組を取得
       const result = await this.service.getHeadlineTopicProgram(id);
       this.logger.log(`指定のヘッドライントピック番組 [${id}] を取得しました`, {
         title: result.title,
         createdAt: result.createdAt,
       });
-      return result;
+      if (!result) {
+        const errorMessage = `指定のヘッドライントピック番組 [${id}] が見つかりません`;
+        this.logger.error(errorMessage);
+        throw new NotFoundException(errorMessage);
+      }
+      // DTO へ変換
+      const dto = HeadlineTopicProgramDto.createFromEntity(result);
+      return dto;
     } catch (error) {
       const errorMessage = 'ヘッドライントピック番組の取得に失敗しました';
       this.logger.error(errorMessage, error, error.stack);
