# apps/backend/src/controllers/api-v1/dto/index.ts
@@ -1,5 +1,6 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { Min } from 'class-validator';
+import { HeadlineTopicProgramWithQiitaPosts } from '@tech-post-cast/database';
+import { IsNumber, IsString, Min } from 'class-validator';
 
 /**
  * ヘッドライントピック番組取得要求DTO
@@ -11,6 +12,7 @@ export class HeadlineTopicProgramsFindRequestDto {
     default: 10,
     required: true,
   })
+  @IsNumber()
   limit: number;
 
   @ApiProperty({
@@ -20,5 +22,42 @@ export class HeadlineTopicProgramsFindRequestDto {
     required: false,
   })
   @Min(1)
+  @IsNumber()
   page?: number;
+}
+
+/**
+ * ヘッドライントピック番組のDTO
+ */
+export class HeadlineTopicProgramDto {
+  @ApiProperty({
+    description: '番組ID',
+    example: 'sample-program-id',
+    required: true,
+  })
+  @IsString()
+  id: string;
+
+  @ApiProperty({
+    description: 'タイトル',
+    example: 'サンプル番組',
+    required: true,
+  })
+  @IsString()
+  title: string;
+
+  /**
+   * HeadlineTopicProgramWithQiitaPosts から生成する
+   * @param entity HeadlineTopicProgramWithQiitaPosts
+   * @returns DTO
+   */
+  static createFromEntity(
+    entity: HeadlineTopicProgramWithQiitaPosts,
+  ): HeadlineTopicProgramDto {
+    const dto = new HeadlineTopicProgramDto();
+    dto.id = entity.id;
+    dto.title = entity.title;
+    //
+    return dto;
+  }
 }
